# SENTANAL-AI

./: .env  .env.example  .gitignore  CHANGELOG.md  DEMO.md  README.md  README_FRONTEND.md  __init__.py  dg  index.html  main.py  package-lock.json  package.json  pyproject.toml  reflog.txt  requirements.txt  tatus  temp_repo.py  test_pg.py
analytics/: __init__.py  crime_statistics.py  district_analysis.py  kpi_engine.py  trend_analysis.py
backend/: AI_INTEGRATION_GUIDE.md  Backend_README.md  DATABASE_INTEGRATION_GUIDE.md  FRONTEND_API_GUIDE.md  main.py
config/: database.py  settings.py
database/: __init__.py  connection.py  integration.py  models.py  queries.py  repositories.py
delivery/: __init__.py  sprint5.py
docs/: AI_BLUEPRINT.md  AI_CRIME_PATTERN_ANALYZER.md  AI_MODULE_README.md  sprint1_design_document.md  sprint2_design_document.md  sprint3_design_document.md  sprint4_design_document.md  sprint5_design_document.md
etl/: __init__.py  checkpoints.py  extract.py  load.py  metrics.py  pipeline.py  transform.py  validate.py
gis/: clustering.py  geocoder.py  heatmap.py  timeline.py
migrations/: 001_create_tables.sql  002_create_indexes.sql  003_seed_reference_data.sql  004_user_auth_contract.sql
neo4j/: graph_builder.py  loader.py  schema.py
scripts/: generate_sprint5_delivery.py  generate_synthetic_data.py  verify_db.py
services/: gemini_service.py
src/: README.md  index.css
tests/: conftest.py  password_test.py  test_ai_pipeline.py  test_analytics_endpoints.py  test_anomaly.py  test_auth.py  test_auth_integration.py  test_confidence.py  test_context_builder.py  test_core_endpoints.py  test_digital_intelligence.py  test_embedding.py  test_extractor.py  test_investigation.py  test_investigation_agent.py  test_investigation_diary.py  test_language.py  test_loader.py  test_metadata.py  test_multilingual.py  test_ocr.py  test_orchestrator.py  (+12 more)
(+337 files in other folders)
